k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fiu-application
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fiu-application
  template:
    metadata:
      labels:
        app: fiu-application
    spec:
      serviceAccountName: fiu-application-service-account
      nodeSelector:
        iam.gke.io/gke-metadata-server-enabled: "true"
      containers:
        - name: fiu-service
          image: ghcr.io/rupeesense/fiu-application:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          command:
            - "/secrets-init/bin/secrets-init"
          args:
            - "--provider=google"
            - "sh"
            - "-ec"
            - "/app/start.sh"
          volumeMounts:
            - name: config-volume
              mountPath: /config
            - name: secrets-init-volume
              mountPath: /secrets-init/bin
      imagePullSecrets:
        - name: ghcr-creds
      volumes:
        - name: config-volume
          configMap:
            name: fiu-application-config
        - name: secrets-init-volume
          emptyDir: { }
