k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fiu-application-service
spec:
  type: NodePort
  selector:
    app: fiu-application
  ports:
    - port: 8080
      targetPort: 8080
